--- a/.gitignore
+++ b/.gitignore
@@ -479,3 +479,4 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,visualstudio,visualstudiocode
+uploads/profile_pictures/1619181879.jpg
